k8s/hipster-demo/65-frontend-ingress-external-l7.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hipster-ingress-external
  namespace: hipster-demo
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    #ingress.gcp.kubernetes.io/pre-shared-cert: hipsterexternal-tls
    #networking.gke.io/v1beta1.FrontendConfig: hipsterexternal-ssl-config # this is required if we want to enforce SSL policies
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: ${hipster_fqdn}
      http:
        paths:
        - backend:
            serviceName: frontend
            servicePort: 80
  tls:
   - hosts:
     - ${hipster_fqdn}
     secretName: hipster-tls-secret
# ---
## this is required if we want to enforce SSL policies (version, etc...)
#  apiVersion: networking.gke.io/v1beta1
#  kind: FrontendConfig
#  metadata:
#    name: hipsterexternal-ssl-config
#    namespace: hipster-demo
#  spec:
#    sslPolicy: restricted
